--- a/0-介绍.md
+++ b/0-介绍.md
@@ -1,70 +1,18 @@
 # 介绍
 
-## 语言介绍
+时间：`2025年10月28日`
 
-## 语法结构
+## 1. Mermaid 介绍
 
-### 一般语法结构
+> Mermaid 是一个基于 JavaScript 的图表绘制工具，它使用 Markdown 启发的文本定义和渲染器来创建和修改复杂的图表。Mermaid 的主要目的是帮助文档跟上开发的步伐。
+>
+> **图表和文档会耗费开发者宝贵的时间，并且很快就会过时**。但是，没有图表或文档会破坏生产力并损害组织学习。
+> 
+> Mermaid 通过使用户能够创建易于修改的图表来解决这个问题，它也可以成为生产脚本（和其他代码片段）的一部分。
 
-行注释：可以忽略“%% ”之后行中的任何内容
+---
 
-
-### `%%{init:{}}%%` 指令（Directives）
-
-指令允许在图表渲染之前对其进行重新配置。它可以改变图表的字体样式、颜色和其他美学方面
-
-目前唯一可用的指令是 init
-
-#### `'theme'`
-
-通常用于在图表开始时配置 Mermaid 渲染器的一些全局或特定图表的行为和样式
-
-- 指令中的内容是 JSON 格式，由键值对组成
-- `'theme':'value'`，其中，value = `default`（默认）、`forest`（森林）、`dark`（暗色）、`neutral`（中性）和 `base`（基础，用于自定义主题）
-- 代码示例：（中性比较好看:star:)
-
-
-```mermaid
-%%{
-    init: {
-        'theme':'neutral'  
-    }
-}%%
-graph TD;
-    A-->B;
-```
-
-#### `'themeVariables'`
-
-允许对当前主题的具体颜色、字体、线条粗细等进行细粒度定制。可以覆盖主题中定义的任何 CSS 变量
-
-- 主题需要使用 `'base'`
-- 代码示例：
-
-```mermaid
-%%{
-    init: {
-        'theme': 'base',
-        'themeVariables': {
-            'primaryColor': '#E0BBE4',
-            'primaryBorderColor': '#957DAD',
-            'primaryTextColor': '#4A4A4A',
-            'lineColor': '#FFC72C',
-            'secondaryColor': '#9AC8EB',
-            'tertiaryColor': '#E8E8E4',
-            'noteBkgColor': '#FFFACD',
-            'noteTextColor': '#555555',
-            'fontFamily': 'Cambria, serif',
-            'fontSize': '15px'
-        }
-    }
-}%%
-
-graph TD
-    A-->B;
-```
-
-## Mermaid所有图表名称
+## 2. Mermaid 所有图表名称
 
 1.  ➡️ **流程图** (Flowchart)
 2.  💬 **时序图** (Sequence Diagram)
@@ -89,13 +37,15 @@ graph TD
 21. 🏢 **架构图** (Architecture)
 22. 🕸️ **雷达图** (Radar)
 
-## Mermaid与AI交互
+---
+
+## 3. 使用 Mermaid 与 LLM 交互
 
 ### 作为输出
 
-- 可以告诉AI对应的图表名称（见上），让ta画
+- 可以告诉LLM对应的图表名称（见上），让ta画
 
-### 作为输出
+### 作为输入
 
 - 写代码时可以输入mermaid（**当然可以是别的AI输出的**）来告知AI整个项目的架构、布局或流程顺序
 - 示例如下：一段有关网页设计的mermaid（由ds-r1输出）
