--- a/1.2-流程图style.md
+++ b/1.2-流程图style.md
@@ -1,27 +1,29 @@
-## `%%{init:{}}%%` 指令（Directives）
+# 流程图 2：style
 
-指令允许在图表渲染之前对其进行重新配置。它可以改变图表的字体样式、颜色和其他美学方面
+时间：`2025年10月28日`
 
-目前唯一可用的指令是 init
+## 1. `%%{init:{}}%%` 指令
+
+- 指令（Directives）允许在图表渲染之前对其进行重新配置。它可以改变图表的字体样式、颜色和其他方面
+- 目前唯一可用的指令是 `init`
 
 ### `'theme'`
 
-通常用于在图表开始时配置 Mermaid 渲染器的一些全局或特定图表的行为和样式
+- 通常用于在图表开始时配置 Mermaid 渲染器的一些全局或特定图表的行为和样式
+- 指令中的内容是 **JSON 格式，由键值对组成**
+  - `'theme':'value'`
+  - 其中，value = `default`（默认）、`forest`（森林）、`dark`（暗色）、`neutral`（中性）和 `base`（基础，用于自定义主题）
+- 代码示例：（中性比较好看)
 
-- 指令中的内容是 JSON 格式，由键值对组成
-- `'theme':'value'`，其中，value = `default`（默认）、`forest`（森林）、`dark`（暗色）、`neutral`（中性）和 `base`（基础，用于自定义主题）
-- 代码示例：（中性比较好看:star:)
-
-
-```mermaid
-%%{
-    init: {
-        'theme':'neutral'  
-    }
-}%%
-graph TD;
-    A-->B;
-```
+    ```mermaid
+    %%{
+        init: {
+            'theme':'neutral'  
+        }
+    }%%
+    graph TD;
+        A-->B;
+    ```
 
 ### `'themeVariables'`
 
@@ -52,6 +54,8 @@ graph TD;
 graph TD
     A-->B;
 ```
+
+---
 
 ## Styling and classes
 
