All note finish (v1)

--- a/1.2-流程图style.md
+++ b/1.2-流程图style.md
@@ -1,6 +1,6 @@
 # 流程图 2：style
 
-时间：`2025年10月28日`
+时间：`2025年10月29日`
 
 ## 1. `%%{init:{}}%%` 指令
 
@@ -57,6 +57,36 @@ graph TD
 
 ---
 
-## Styling and classes
+## 2. Styling and Class
 
-待补充，详见官网文档
+### 节点样式
+
+- 语法格式：`style 节点id fill:#bbf,stroke:#f66,stroke-width:2px,color:#fff`
+- 示例：
+
+    ```mermaid
+    graph LR
+        id1(Start)-->id2(Stop)
+
+        style id1 fill:#f9f001,stroke:#333,stroke-width:4px
+        style id2 fill:#bbfb0,stroke:#f66,stroke-width:2px,color:#ff0
+    ```
+
+### 类
+
+- 定义类：`classDef className fill:#f9f,stroke:#333,stroke-width:4px;`
+- 将节点添加到类下：
+  - `class nodeId1 className;`
+  - 或者 `节点id:::类名`
+- 示例
+
+    ```mermaid
+    graph LR
+        n6(A) --- n7(B)
+
+    n6:::Aqua
+    n7:::Rose
+
+    classDef Rose stroke-width:1px, stroke-dasharray:none, stroke:#FF5978, fill:#FFDFE5, color:#8E2236
+    classDef Aqua stroke-width:1px, stroke-dasharray:none, stroke:#46EDC8, fill:#DEFFF8, color:#378E7A
+    ```
