--- a/3-其他图表.md
+++ b/3-其他图表.md
@@ -1,17 +1,17 @@
-# Mermaid 5：其他图表
+# 其他图表
 
-## 思维导图
+时间：`2025年10月29日`
+
+## 1. 思维导图
 
 思维导图（Mindmap）：思维导图是一种用于将信息可视化地组织成层级结构的图表，它展示了整体各个部分之间的关系。它通常围绕一个单一的概念创建，这个概念以图像的形式绘制在空白页的中心，然后添加与该概念相关的想法的表示
 
 ### 基本语法
 
-创建思维导图的语法很简单：它依赖于缩进来设置层级结构中的级别
-
-使用关键字 `mindmap` 来开始
-
-- 紧跟在 mindmap 声明之后的第一个非空行，且该行没有或只有最少缩进的节点，会被自动识别为根节点
-- 下面的字母可以直接替换为内容（见示例二）
+- 使用关键字 `mindmap` 来开始
+- 思维导图的语法依赖于缩进来设置层级结构中的级别
+  - 紧跟在 mindmap 声明之后的第一个非空行，且该行没有或只有最少缩进的节点，会被自动识别为根节点
+  - 下面的字母可以直接替换为内容（见示例二）
 
 ```mermaid
 %%{
@@ -34,12 +34,10 @@ Root
 
 ### 个性化设置
 
-#### 节点形状
+**节点形状**
 
-可以使用不同的形状来显示节点
-
-为节点指定形状时，**语法与流程图节点类似**
-
+- 可以使用不同的形状来显示节点
+- 为节点指定形状时，**语法与流程图节点类似**
 - 例如，`id(I am a rounded square)`
 
 ```mermaid
@@ -54,13 +52,13 @@ A(西瓜)
 
 ```
 
-图标（icon）：此处略，详见官网文档：https://mermaid.js.org/syntax/mindmap.html
+**图标（icon）**：
+
+- 此处略，详见官网文档：https://mermaid.js.org/syntax/mindmap.html
 
 ---
 
-# Mermaid 4：XY坐标图
-
-XY 坐标图（xy chart）
+## 2. XY坐标图（xy chart）
 
 使用 `xychart-beta` 关键字开始
 
@@ -141,10 +139,9 @@ xychart-beta
 | `showAxisLine` | 是否显示轴线 | `true` |
 | `axisLineWidth` | 轴线厚度 | `2` |
 
-
 ---
 
-## 桑基图
+## 3. 桑基图
 
 Sankey diagram
 
